<resources>
    <string name="app_name">AdminRentit</string>
    <string name="default_web_client_id">955390790113-rqb24cko63ncekh2ctcbp51s7mk20e28.apps.googleusercontent.com</string>
    <string name="design">Design</string>
    <string name="password">Password</string>
    <string name="facebook">Facebook</string>
    <string name="welcome_nback">Welcome\nBack</string>
    <string name="email">Email</string>
    <string name="google">Google</string>
    <string name="don_t_have_a_account">Don\'t have a Account</string>
    <string name="create_account">Create\nAccount</string>
    <string name="active_nsuzuki_nhatchbacksi_nsedans">Active\nSuzuki\nHatchbacksi\nSedans</string>
    <string name="add_item">Add Item</string>
    <string name="save_information">Save Information</string>
    <string name="address">Address</string>
    <string name="admin_profile">Admin Profile</string>
    <string name="edit_your_profile">Edit your Profile</string>
    <string name="_1234567891">1234567891</string>
    <string name="pending_nvehicle">Pending\nVehicle</string>
    <string name="_1500">1500</string>
    <string name="completed_ntransaction">Completed\nTransaction</string>
    <string name="_5">5</string>
    <string name="customer_name">Customer Name</string>
    <string name="payment">Payment</string>
    <string name="not_received">Not Received</string>
    <string name="delivery">Delivery</string>
</resources>