<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminProfileActivity">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:scaleType="centerCrop"
        android:src="@drawable/arrow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:text="@string/admin_profile"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/backButton"
        app:layout_constraintTop_toTopOf="@+id/backButton" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/amarante"
        android:text="@string/edit_your_profile"
        android:textColor="@color/textColor"
        app:layout_constraintEnd_toStartOf="@+id/backButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <TextView
        android:id="@+id/editButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:drawableLeft="@drawable/edit"
        android:fontFamily="@font/amarante"
        android:gravity="center"
        android:text="Edit your Profile"
        android:textColor="@color/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20"
        tools:layout_editor_absoluteY="88dp" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="382dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/edittextshape"
        android:elevation="2dp"
        android:orientation="horizontal"
        android:outlineSpotShadowColor="@color/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_weight="3"
            android:fontFamily="@font/amarante"
            android:gravity="center"
            android:padding="15dp"
            android:text="Name"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView20"
            tools:layout_editor_absoluteY="88dp" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:fontFamily="@font/lato_thin"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="TextView" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/edittextshape"
        android:elevation="2dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:outlineSpotShadowColor="@color/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_weight="3"
            android:elevation="2dp"
            android:fontFamily="@font/amarante"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/address"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView20"
            tools:layout_editor_absoluteY="88dp" />

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:fontFamily="@font/lato_thin"
            android:inputType="textMultiLine"
            android:padding="4dp"
            android:text="TextView" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="394dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittextshape"
        android:elevation="2dp"
        android:orientation="horizontal"
        android:outlineSpotShadowColor="@color/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_weight="3"
            android:elevation="2dp"
            android:fontFamily="@font/amarante"
            android:gravity="center"
            android:padding="15dp"
            android:text="Email"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView20"
            tools:layout_editor_absoluteY="88dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:fontFamily="@font/lato_thin"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="Textview@gmail.com" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="394dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittextshape"
        android:elevation="2dp"
        android:orientation="horizontal"
        android:outlineSpotShadowColor="@color/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_weight="3"
            android:elevation="2dp"
            android:fontFamily="@font/amarante"
            android:gravity="center"
            android:padding="15dp"
            android:text="Phone"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView20"
            tools:layout_editor_absoluteY="88dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:fontFamily="@font/lato_thin"
            android:inputType="phone"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/_1234567891" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="394dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittextshape"
        android:elevation="2dp"
        android:orientation="horizontal"
        android:outlineSpotShadowColor="@color/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_weight="3"
            android:fontFamily="@font/amarante"
            android:gravity="center"
            android:padding="15dp"
            android:text="Password"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView20"
            tools:layout_editor_absoluteY="88dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:fontFamily="@font/lato_thin"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="TextView" />


    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@drawable/edittextshape"
        android:fontFamily="@font/amarante"
        android:text="@string/save_information"
        android:textAllCaps="false"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView28"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/amarante"
        android:text="Desing By/BVD"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>